# VOATOL

./: CMakeLists.txt  LICENSE  Makefile  README.md  arpack_interface.cpp
Arnoldi/: Makefile  arnoldi.cpp
BLKLanczos/: Makefile  block_lanczos  block_lanczos.cpp
BLKTRLM/: Makefile  block_trlm  block_trlm.cpp
IRAM/: Makefile  iram.cpp  script.sh
Lanczos/: Makefile  lanczos  lanczos.cpp
TRLM/: Makefile  trlm  trlm.cpp
arpack/: Makefile  arpack_interface.cpp
include/: algoHelpers.h  algoHelpers_header.h  algorithm_utils.h  arpack_interface.h  blas.h  io.h  lapack.h  linAlgHelpers.h  sort.h  voatol_internal.h
lib/: CMakeLists.txt  algorithm_utils.cpp  blas.cpp  io.cpp  sort.cpp
solvers/: CMakeLists.txt  trlm.cpp
tests/: CMakeLists.txt  Makefile  arpack.cpp  blktrlm.cpp  iram.cpp  trlm.cpp
